# ros2-consolidator-project

./: README.md  my_robot.urdf  run.bash
src/robot_4_ruedas_description/: CMakeLists.txt  package.xml
src/robot_4_ruedas_description/launch/: robot_4_ruedas_gazebo.launch.py
src/robot_4_ruedas_description/rviz/: robot_4_ruedas.rviz
src/robot_4_ruedas_description/urdf/: robot_4_ruedas.urdf
