<?xml version="1.0"?>
<package format="3">
  <name>robot_4_ruedas_description</name>
  <version>0.0.1</version>
  <description>URDF y launch para visualizar robot_4_ruedas en Gazebo</description>
  <maintainer email="krlos@todo.todo">krlos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
